--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Pathway+Extreme:ital,opsz,wdth,wght@0,8..144,75,100..900;1,8..144,75,100..900&family=Staatliches&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
