changes title of the website

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Pathway+Extreme:ital,opsz,wdth,wght@0,8..144,75,100..900;1,8..144,75,100..900&family=Staatliches&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>NE-IECCE-2025</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
